# gitwise

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
src/ai/: mod.rs  summary.rs
src/git/: diff.rs  log.rs  mod.rs  pr.rs  staging.rs
src/ui/: app.rs  mod.rs  widgets.rs
